--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     
     <title>Etch A Sketch</title>
-    <script type="text/javascript" src="/etch.js"></script>
+    <script type="text/javascript" src="etch.js"></script>
 </head>
 <body>
     <h1>Etch A Sketch</h1>
